--- a/auth-service/auth-service/pom.xml
+++ b/auth-service/auth-service/pom.xml
@@ -108,6 +108,13 @@
             <scope>runtime</scope>
         </dependency>
 
+		<!-- Swagger/OpenAPI Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
