--- a/dynamic/path.yml
+++ b/dynamic/path.yml
@@ -32,7 +32,7 @@ http:
         accessControlAllowOriginList:
           - "http://localhost:3000"
         accessControlAllowMethods:
-          - "GET" # add what you use
+          - "GET" 
           - "POST"
           - "PUT"
           - "PATCH"
