--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3.9"
 
 services:
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"     
+      - "15672:15672"  
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      demo_net:
+  
   reverse-proxy:
     image: traefik:v3.2
     container_name: reverse-proxy
@@ -128,8 +142,7 @@ services:
     build: ./frontend
     image: frontend-react
     container_name: frontend
-    ports:
-      - "3000:80"
+    # Port removed - access through Traefik on port 80
     networks:
       demo_net:
 
