--- a/monitoring-service/src/main/resources/application.properties
+++ b/monitoring-service/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 spring.application.name=monitoring-service
+
+###############################################
+### DATABASE CONNECTIVITY CONFIGURATIONS ###
+###############################################
+database.ip = ${DB_IP:localhost}
+database.port = ${DB_PORT:5432}
+database.user = ${DB_USER:postgres}
+database.password = ${DB_PASSWORD:1163}
+database.name = ${DB_DBNAME:monitoringdb}
+
+spring.sql.init.platform=postgres
+spring.datasource.url = jdbc:postgresql://${database.ip}:${database.port}/${database.name}
+spring.datasource.username = ${database.user}
+spring.datasource.password = ${database.password}
+
+
+# Hibernate ddl auto (create, create-drop, validate, update) am schimbat in create din update
+# la docker la 8080:8080 facem bridge, docker-compose la acelasi nivel cu fisierele proiectelor
+# de facut cu comanda de mana
+#de comentnat ce e build
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.show_sql=true
+server.tomcat.threads.max = 1
+###############################################
+### LOGGING CONFIGURATIONS ###
+###############################################
+logging.level.root=warn
+logging.level.org.springframework=warn
+logging.level.ro.tuc=warn
+###############################################
+### EMBEDDED TOMCAT CONFIGURATIONS ###
+###############################################
+server.port=${PORT:8083}
