--- a/monitoring-service/src/main/resources/application.properties
+++ b/monitoring-service/src/main/resources/application.properties
@@ -33,3 +33,10 @@ logging.level.ro.tuc=warn
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8083}
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
