--- a/auth-service/auth-service/pom.xml
+++ b/auth-service/auth-service/pom.xml
@@ -115,6 +115,12 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<!-- RabbitMQ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
