--- a/auth-service/auth-service/src/main/resources/application.properties
+++ b/auth-service/auth-service/src/main/resources/application.properties
@@ -32,3 +32,11 @@ logging.level.ro.tuc=warn
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8082}
+
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
