--- a/device-service/src/main/resources/application.properties
+++ b/device-service/src/main/resources/application.properties
@@ -31,3 +31,11 @@ logging.level.ro.tuc=warn
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
 server.port=${PORT:8081}
+
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
